Add cursorStyle to modes

--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   ],
   "main": "./out/src/extension",
   "contributes": {
-    "commands": [
-    ],
+    "commands": [],
     "keybindings": [
       {
         "key": "Escape",
