Add declarative testing  framework

--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
       "properties": {
         "keyano.keyboardLayout": {
           "type": "string",
-          "enum": ["qwerty", "colemak"],
+          "enum": [
+            "qwerty",
+            "colemak"
+          ],
           "default": "qwerty",
           "description": "The keyboard layout that should be used to correctly place positional bindings."
         }
@@ -42,10 +45,11 @@
     "test": "node ./node_modules/vscode/bin/test"
   },
   "devDependencies": {
-    "typescript": "^2.0.3",
-    "vscode": "^1.0.0",
-    "mocha": "^2.3.3",
+    "@types/mocha": "^2.2.32",
     "@types/node": "^6.0.40",
-    "@types/mocha": "^2.2.32"
+    "js-yaml": "^3.9.1",
+    "mocha": "^2.3.3",
+    "typescript": "^2.0.3",
+    "vscode": "^1.0.0"
   }
 }
