--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "test": "node ./node_modules/vscode/bin/test"
   },
   "devDependencies": {
+    "@types/js-yaml": "^3.9.1",
     "@types/mocha": "^2.2.32",
     "@types/node": "^6.0.40",
     "js-yaml": "^3.9.1",
