--- a/test/extension.yaml
+++ b/test/extension.yaml
@@ -1,5 +1,33 @@
 # Cursor is denoted by |
 
+# Actions
+- describe: join
+  scenarios:
+  - it: joins lines
+    start: |
+      wo[rd
+      wo]rd
+    input: t
+    text is: |
+      word word
+  - it: removes white space
+    start: |
+      te[xt
+        inde]nted
+    input: t
+    text is: |
+      text indented
+  - it: joins lines and selects spaces
+    start: |
+      fi[rst
+      second
+      thi]rd
+    input: T
+    text is: |
+      first second third
+    selections are: [" ", " "]
+
+
 # Text objects
 - describe: word
   cases:
@@ -390,29 +418,3 @@
         start: "[bar]"
         input: eq
         selection is: bar
-
-- describe: join
-  scenarios:
-  - it: joins lines
-    start: |
-      wo[rd
-      wo]rd
-    input: t
-    text is: |
-      word word
-  - it: removes white space
-    start: |
-      te[xt
-        inde]nted
-    input: t
-    text is: |
-      text indented
-  - it: joins lines and selects spaces
-    start: |
-      fi[rst
-      second
-      thi]rd
-    input: T
-    text is: |
-      first second third
-    selections are: [" ", " "]
