--- a/test/extension.yaml
+++ b/test/extension.yaml
@@ -522,3 +522,60 @@
         start: "```|```"
         input: e~
         selection is: "``````"
+
+- describe: paired delimiter
+  cases:
+    - describe: "#findNext()"
+      scenarios:
+      - it: selects pair
+        start: "|( foo bar )"
+        input: n(
+        selection is: ( foo bar )
+      - it: selects pair from beginning of line
+        start: "|( foo ) bar"
+        input: n(
+        selection is: ( foo )
+      - it: selects pair from middle of line
+        start: foo | ( bar )
+        input: n(
+        selection is: ( bar )
+      - it: selects next pair
+        start: ( foo )| ( bar )
+        input: n(
+        selection is: ( bar )
+      - it: selects pair it's inside
+        start: ( fo|o )  ( bar )
+        input: n(
+        selection is: ( foo )
+      - it: traverses within pair
+        start: ( foo [( bar )] ( baz ) )
+        input: n(
+        selection is: ( baz )
+      - it: expands out when no inner pair
+        start: ( foo ( bar ) [( baz )] )
+        input: n(
+        selection is: ( foo ( bar ) ( baz ) )
+      - it: does nothing when no next pair, open
+        start: foo ( bar ) [( baz )] (
+        input: n(
+        selection is: ( baz )
+      - it: does nothing when no next pair, close
+        start: foo ( bar ) [( baz )] )
+        input: n(
+        selection is: ( baz )
+      - it: expands partly covered pair if only covering start
+        start: "[( fo]o ) ( bar )"
+        input: n(
+        selection is: ( foo )
+      - it: selects next pair if covering end
+        start: "( f[oo )] ( bar )"
+        input: n(
+        selection is: ( bar )
+      - it: selects balanced pair
+        start: "|( ( bar ) ( baz ) )"
+        input: n(
+        selection is: ( ( bar ) ( baz ) )
+      - it: selects balanced pair
+        start: "( [( bar ) ( b]az ) )"
+        input: n(
+        selection is: ( baz )
