--- a/test/extension.yaml
+++ b/test/extension.yaml
@@ -579,3 +579,57 @@
         start: "( [( bar ) ( b]az ) )"
         input: n(
         selection is: ( baz )
+    - describe: "#findPrev()"
+      scenarios:
+      - it: selects pair
+        start: ( foo bar )|
+        input: p(
+        selection is: ( foo bar )
+      - it: selects pair from middle of line
+        start: ( foo ) |bar
+        input: p(
+        selection is: ( foo )
+      - it: selects pair from end of line
+        start: foo ( bar )|
+        input: p(
+        selection is: ( bar )
+      - it: selects previous pair
+        start: ( foo ) |( bar )
+        input: p(
+        selection is: ( foo )
+      - it: selects pair it's inside
+        start: ( foo )  ( b|ar )
+        input: p(
+        selection is: ( bar )
+      - it: traverses within pair
+        start: ( foo ( bar ) [( baz )] )
+        input: p(
+        selection is: ( bar )
+      - it: expands out when no inner pair
+        start: ( foo [( bar )] ( baz ) )
+        input: p(
+        selection is: ( foo ( bar ) ( baz ) )
+      - it: does nothing when no next pair, open
+        start: ( foo [( bar )] ( baz )
+        input: p(
+        selection is: ( bar )
+      - it: does nothing when no next pair, open
+        start: ) foo [( bar )] ( baz )
+        input: p(
+        selection is: ( bar )
+      - it: expands partly covered pair if only covering end
+        start: ( foo ) ( ba[r )]
+        input: p(
+        selection is: ( bar )
+      - it: selects previous pair if covering start
+        start: ( foo ) [( b]ar )
+        input: p(
+        selection is: ( foo )
+      - it: selects balanced pair
+        start: ( ( bar ) ( baz ) )|
+        input: p(
+        selection is: ( ( bar ) ( baz ) )
+      - it: selects balanced pair
+        start: "( ( ba[r ) ( baz )] )"
+        input: p(
+        selection is: ( bar )
