--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "vscode:prepublish": "tsc -p ./",
     "compile": "tsc -watch -p ./",
     "postinstall": "node ./node_modules/vscode/bin/install",
-    "test": "node ./node_modules/vscode/bin/test"
+    "test": "node ./node_modules/vscode/bin/test",
+    "install-extension": "rsync -r . ~/.vscode/extensions/keyano-vscode --exclude node_modules/.bin --exclude .vscode-test"
   },
   "devDependencies": {
     "@types/js-yaml": "^3.9.1",
