--- a/package.json
+++ b/package.json
@@ -7,12 +7,8 @@
   "engines": {
     "vscode": "^1.15.0"
   },
-  "categories": [
-    "Other"
-  ],
-  "activationEvents": [
-    "*"
-  ],
+  "categories": ["Other"],
+  "activationEvents": ["*"],
   "main": "./out/src/extension",
   "contributes": {
     "commands": [],
@@ -22,12 +18,10 @@
       "properties": {
         "keyano.keyboardLayout": {
           "type": "string",
-          "enum": [
-            "qwerty",
-            "colemak"
-          ],
+          "enum": ["qwerty", "colemak"],
           "default": "qwerty",
-          "description": "The keyboard layout that should be used to correctly place positional bindings."
+          "description":
+            "The keyboard layout that should be used to correctly place positional bindings."
         }
       }
     },
@@ -43,7 +37,10 @@
     "compile": "tsc -watch -p ./",
     "postinstall": "node ./node_modules/vscode/bin/install",
     "test": "node ./node_modules/vscode/bin/test",
-    "install-extension": "rsync -r . ~/.vscode/extensions/keyano-vscode --exclude node_modules/.bin --exclude .vscode-test"
+    "install-extension":
+      "rsync -r . ~/.vscode/extensions/keyano-vscode --exclude node_modules/.bin --exclude .vscode-test",
+    "format":
+      "prettier --write \"**/*.{ts,js,json}\" --ignore-path \".gitignore\""
   },
   "devDependencies": {
     "@types/js-yaml": "^3.10.1",
@@ -53,5 +50,8 @@
     "mocha": "^4.0.1",
     "typescript": "^2.6.2",
     "vscode": "^1.1.10"
+  },
+  "prettier": {
+    "arrowParens": "always"
   }
 }
