Only override the escape key in insert mode

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "keybindings": [
       {
         "key": "Escape",
-        "command": "keyano.escape"
+        "command": "keyano.escape",
+        "when": "editorTextFocus && keyano.mode == 'insert'"
       }
     ]
   },
