--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,10 +7,14 @@
       "type": "extensionHost",
       "request": "launch",
       "runtimeExecutable": "${execPath}",
-      "args": ["--extensionDevelopmentPath=${workspaceRoot}"],
+      "args": [
+        "--extensionDevelopmentPath=${workspaceRoot}"
+      ],
       "stopOnEntry": false,
       "sourceMaps": true,
-      "outFiles": ["${workspaceRoot}/out/src/**/*.js"],
+      "outFiles": [
+        "${workspaceRoot}/out/src/**/*.js"
+      ],
       "preLaunchTask": "npm"
     },
     {
@@ -24,7 +28,9 @@
       ],
       "stopOnEntry": false,
       "sourceMaps": true,
-      "outFiles": ["${workspaceRoot}/out/test/**/*.js"],
+      "outFiles": [
+        "${workspaceRoot}/out/test/**/*.js"
+      ],
       "preLaunchTask": "npm"
     }
   ]
